--- a/templates/settings.html
+++ b/templates/settings.html
@@ -13,6 +13,15 @@
             </hgroup>
             <a href="{{ url_for('get_stores_page') }}" role="button">Gestionează Magazinele</a>
         </article>
+        
+        <article>
+            <hgroup>
+                <h2>🚚 Conturi Curieri</h2>
+                <p>Configurează conturile de curieri, credențialele și link-urile de tracking.</p>
+            </hgroup>
+            <a href="{{ url_for('get_couriers_page') }}" role="button">Gestionează Curierii</a>
+        </article>
+
         <article>
             <hgroup>
                 <h2>📇 Categorii Magazine</h2>
@@ -20,12 +29,5 @@
             </hgroup>
             <a href="{{ url_for('get_categories_page') }}" role="button">Gestionează Categoriile</a>
         </article>
-        <article>
-            <hgroup>
-                <h2>🚚 Categorii Curieri</h2>
-                <p>Grupează conturile de curieri și configurează link-urile de tracking.</p>
-            </hgroup>
-            <a href="{{ url_for('get_courier_categories_page') }}" role="button">Gestionează Curierii</a>
-        </article>
-    </div>
+        </div>
 {% endblock %}
